# tp-00-paa-2024-gerador-de-obra-de-arte

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.c
src/types/board/: board.c  board.h
src/types/figure/: figure.h
src/types/menu/: menu.c  menu.h
src/types/utils/: utils.c  utils.h
